# meeTINg

./: TODO
meeting-client-application/etc/: Grupy.txt  Logowanie.txt  Prosby-uzytkownikow.txt  Rejestracja.txt  Terminy.txt  Wszystkie-grupy.txt  Wydarzenia.txt
meeting-client-application/src/main/java/meeting/: Main.java
meeting-client-application/src/main/java/meeting/api/: Client.java  ConnectionManager.java
meeting-client-application/src/main/java/meeting/client/: Client.java
meeting-client-application/src/main/java/meeting/controller/: AllGroupsWindowController.java  EventsWindowController.java  GroupsWindowController.java  LoginWindowController.java  OffersWindowController.java  RegistrationWindowController.java  RequestsReviewWindowController.java  SettingsWindowController.java
meeting-client-application/src/main/java/meeting/enums/: RequestFlag.java  ResponseFlag.java
meeting-client-application/src/main/resources/fxml/: AllGroupsWindow.fxml  EventsWindow.fxml  GroupsWindow.fxml  LoginWindow.fxml  OffersWindow.fxml  RegistrationWindow.fxml  RequestsReviewWindow.fxml  Settings.fxml
server-client-cpp/etc/: Grupy_Server.txt  Logowanie_server.txt  Rejestracja_server.txt  Terminy_server.txt  Wszystkie grupy_server.txt  Wydarzenia_server.txt  prosby_uzytkownikow_server.txt
server-client-cpp/server-prototype/: CMakeLists.txt  ClientStructure.h  ConnectionManager.cpp  ConnectionManager.h  ConsoleManager.cpp  ConsoleManager.h  DataBaseConnection.cpp  DataBaseConnection.h  ResponseFlag.h  ServerController.cpp  ServerController.h  Waiter.h  main.cpp
(+22 files in other folders)
